<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- Activities -->

    <string name="title_activity_jobs_list">Lancer</string>
    <string name="title_activity_jobs_options">JobsOptions</string>
    <string name="title_activity_add_new_job">Add New Job</string>
    <string name="title_activity_add_new_task">Add New Task</string>
    <string name="title_activity_task_adapter">TaskAdapter</string>
    <string name="title_activity_expences_list">ExpencesList</string>
    <string name="title_activity_tasks_list">TasksList</string>
    <string name="title_activity_locations_list">LocationsList</string>
    <string name="title_activity_items_list">ItemsList</string>
    <string name="title_activity_add_new_location">AddNewLocation</string>
    <string name="title_activity_view_task">ViewTask</string>
    <string name="title_activity_view_expenses">ViewExpenses</string>
    <string name="title_activity_view_notes">ViewNotes</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_add_new_expense">Add New Expense</string>
    <string name="title_activity_add_new_note">Add New Note</string>

    <!-- Buttons -->

    <string name="add_new_job">+ New Job</string>
    <string name="button_add_new_task">+ New Task</string>
    <string name="button_add_new_location">+ Location</string>
    <string name="button_add_new_item">+ Item</string>
    <string name="button_add_new_expense">+ Expense</string>
    <string name="button_add_new_note">+ Note</string>
    <string name="button_save">Save</string>
    <string name="button_add_task_deadline">+ Deadline</string>
    <string name="button_delete_task">Delete Task</string>

    <!-- Layout: Jobs - Strings -->

    <string name="jobs">Jobs</string>
    <string name="job_name">Job Name</string>
    <string name="job">Job</string>
    <string name="AddNewJob_job_name_title">Job Name:</string>
    <string name="AddNewJob_job_location_title">Job Location: (Optional)</string>
    <string name="AddNewJob_job_deadline_title">Job Deadline: (Optional)</string>

    <!-- Layout: Tasks - Strings -->

    <string name="tasks">Tasks</string>
    <string name="due_date">Due:</string>
    <string name="AddNewTask_task_name_title">Task Name:</string>
    <string name="AddNewTask_task_deadline_title">Task Deadline: (Optional)</string>
    <string name="AddNewTask_task_notes_title">Task Notes: (Optional)</string>
    <string name="AddNewTask_task_location_title">Task Location: (Optional)</string>
    <string name="AddNewTask_task_hourly_wage_title">Task Hourly Wage: (Optional)</string>
    <string name="AddNewTask_task_phone_number_title">Phone Number: (Optional)</string>
    <string name="AddNewTask_task_email_address_title">Email: (Optional)</string>
    <string name="AddNewTask_call_phone">Call</string>
    <string name="AddNewTask_email_person">Mail</string>
    <string name="AddNewTask_view_task_map">View on Map</string>
    <string name="AddNewTask_start_task">Start Task</string>
    <string name="AddNewTask_notify">Notify</string>
    <string name="AddNewTask_view_task_notes">Task Notes</string>
    <string name="AddNewTask_view_task_expenses">Task Expenses</string>
    <string name="AddNewTask_edit_task">Edit Task</string>

    <!-- Layout: Location - Strings -->

    <string name="location">Location:</string>
    <string name="location_name_title">Location nickname:</string>
    <string name="location_address1">Address Line 1:</string>
    <string name="location_address2">Address Line 2:</string>
    <string name="location_address3">Address Line 3:</string>

    <!-- Layout: Expenses - Strings -->

    <string name="expenses">Expenses</string>
    <string name="AddNewExpense_choose_item_title">Pick an Item:</string>
    <string name="AddNewExpense_number_of_items_title">Quantity:</string>
    <string name="AddNewExpense_assign_expense_to_task">Assign to a Task: (Optional)</string>
    <string name="item_name_title">Item name:</string>
    <string name="item_cost_title">Item cost: (per item)</string>
    <string name="ViewExpense_cost_title">Cost:</string>
    <string name="ViewExpense_quantity_title">Quantity:</string>
    <string name="ViewExpense_task_title">Assigned to Task:</string>
    <string name="ViewExpense_button_edit_expense">Edit Expense</string>
    <string name="ExpensesList_total_expenses">Expenses Total:</string>
    <string name="total_cost">Total Cost:</string>

    <!-- Layout: Notes - Strings -->

    <string name="notes">Notes</string>
    <string name="AddNewNote_note_subject">Note Subject:</string>
    <string name="AddNewNote_note_body">Note Body:</string>
    <string name="AddNewNote_note_to_task">Assign to a Task: (Optional)</string>
    <string name="ViewNote_button_edit_note">Edit Note</string>
    <string name="EditNote_button_save_update">Update</string>
    <string name="EditNote_button_delete_note">Delete</string>

    <!-- Layout: Invoices - Strings -->

    <string name="create_invoice">Create Job Invoice</string>
    <string name="Invoice_total_earned_tasks">Total Earned from Tasks:</string>
    <string name="Invoice_total_expenses">Total Expenses:</string>
    <string name="email_invoice">Email Invoice</string>
    <string name="total_earned">Total Earned: (Not sent in invoice)</string>
    <string name="total_due">Total to be Paid:</string>
    <string name="recipients_name">Enter the recipient\'s name:</string>
    <string name="recipients_email">Enter the recipient\'s email address:</string>
    <string name="your_name">Enter your name:</string>
    <string name="email_message">Add a message (Optional):</string>

    <!-- Layout: Settings - Strings -->

    <string name="job_order_label">Sort Jobs By:</string>
    <string name="order_none">Do not sort</string>
    <string name="order_deadline">Sort by closest deadline</string>
    <string name="order_alpha_asc">Sort alphabetically A-Z</string>
    <string name="order_alpha_desc">Sort alphabetically Z-A</string>

    <!-- Miscellaneuous - Strings -->

    <string name="lancer_splash_screen">Lancer Splash Screen</string>
    <string name="app_name">Lancer</string>
    <string name="invoice">Invoice</string>
    <string name="menu_settings">Settings</string>
    <string name="arrow">></string>
    <string name="welcome_text">Hi there! To get started simply add a Job name.</string>
    <string name="welcome_text2">You can call it whatever you like, it is a simple aid to help you remember which job is which.</string>
    <string name="hello_world">Hello.... this is Hal. I know what you are up to.</string>
    <string name="title_activity_notes_list">NotesList</string>
    <string name="title_activity_edit_note">EditNote</string>
    <string name="title_activity_edit_task">Edit Task</string>
    <string name="title_activity_edit_expense">Edit Expense</string>
    <string name="title_activity_view_job_invoice">View Job Invoice</string>
    <string name="title_activity_next_task_widget">NextTaskWidget</string>

</resources>