<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <TextView
        android:id="@+id/AddNewNote_note_subject_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:text="@string/AddNewNote_note_subject" />

    <EditText
        android:id="@+id/note_subject"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/AddNewNote_note_subject_title"
        android:ems="10" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/AddNewNote_note_body_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/note_subject"
        android:text="@string/AddNewNote_note_body" />

    <EditText
        android:id="@+id/note_body"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/AddNewNote_note_to_task_title"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/AddNewNote_note_body_title"
        android:ems="10"
        android:inputType="textMultiLine" />
    

    <Spinner
        android:id="@+id/note_to_task"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/save_note"
        android:layout_alignParentLeft="true"
        android:layout_alignRight="@+id/note_body" />

    <TextView
        android:id="@+id/AddNewNote_note_to_task_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/note_to_task"
        android:layout_alignParentLeft="true"
        android:text="@string/AddNewNote_note_to_task" />    

    <Button
        android:id="@+id/save_note"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:onClick="saveNote"
        android:text="@string/button_save" />


</RelativeLayout>
